syntax = "proto3";

package versiontracker;

option go_package = "github.com/brotherlogic/versiontracker/proto";

import "github.com/brotherlogic/buildserver/proto/buildserver.proto";

message Config {
  map<string,int32> build_bugs = 1;
}

message NewVersionRequest {
  buildserver.Version version = 1;
}

message NewVersionResponse {

}

message NewJobRequest {
  buildserver.Version version = 1;
}

message NewJobResponse {

}

service VersionTrackerService {
  rpc NewVersion(NewVersionRequest) returns (NewVersionResponse) {};
  rpc NewJob(NewJobRequest) returns (NewJobResponse) {};
}